--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,27 @@
-mss
+cachetools
+certifi
+charset-normalizer
+dbus-python
 discord-webhook
-python-dotenv
+google-api-core
 google-api-python-client
 google-auth
+google-auth-httplib2
+googleapis-common-protos
+httplib2
+humanize
+idna
+mss
+plyer
+proto-plus
+protobuf
+psutil
+pyasn1
+pyasn1_modules
+pyparsing
+python-dotenv
+requests
+rsa
+uritemplate
+urllib3
+websockets
